# sample-drf-vue-jwt

./: .gitignore  README.md  manage.py  pyproject.toml  urls.py
frontend/: .env.development  package.json  vue.config.js
frontend/public/: index.html
frontend/src/: App.vue  main.js  router.js  store.js
frontend/src/views/: About.vue  Auth.vue  Home.vue  Logout.vue
settings/: base.py
static/vue/css/: auth.3eea6679.css
static/vue/js/: about.7933b675.js  about.7933b675.js.map  about.88055eb1.js  about.88055eb1.js.map  app.42783cac.js  app.42783cac.js.map  app.c47847ae.js  app.c47847ae.js.map  auth.759f988f.js  auth.759f988f.js.map  auth.9e23eab4.js  auth.9e23eab4.js.map  chunk-vendors.e7d3dd7d.js  chunk-vendors.e7d3dd7d.js.map  chunk-vendors.f7016ed0.js  chunk-vendors.f7016ed0.js.map  logout.b9e5f349.js  logout.b9e5f349.js.map
templates/: index.html
