[tool.poetry]
name = "sample-drf-jwt"
version = "0.1.0"
description = ""
authors = ["RyoKasai <ryo.kasai@gooya.co.jp>"]

[tool.poetry.dependencies]
python = "^3.7"
django = "^2.2"
django-environ = "^0.4.5"
djangorestframework = "^3.10"
django-allauth = "^0.39.1"
django-cleanup = "^4.0"
django-filter = "^2.2"
drf-writable-nested = "^0.5.1"
django-cors-headers = "^3.1"
djangorestframework-jwt = "^1.11"
drf-extensions = "^0.5.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.7"
mypy = "^0.720.0"
isort = "^4.3"
pyformat = "^0.7.0"
bpython = "^0.18.0"
django-debug-toolbar = "^2.0"
django-extensions = "^2.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
